# threadx-cpp-test-app

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh
app/: STM32L496ZGTX_FLASH.ld  app.cpp  flashSimulator.cpp  flashSimulator.hpp  fx_user.h.in  jLogger.cpp  jLogger.hpp  lx_user.h.in  rttLogger.cpp  rttLogger.hpp  simulatorMediaDriver.cpp  simulatorMediaDriver.hpp  test-app.ioc  test.cpp  test.hpp  tx_user.h.in  version.hpp.in
app/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
app/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  sysmem.c  tx_initialize_low_level.S
app/Core/Startup/: startup_stm32l496zgtx-dfu.s
app/Drivers/: CMakeLists.txt
lib/: CMakeLists.txt
script/: l496zg.jflash
